<resources>
    <string name="app_name">Pocket Noodle</string>
    <string name="title_activity_settings">Settings</string>
    <string name="default_snake_name">Noodle</string>
    <string name="button_feed_text">Add Feed</string>
    <string name="button_shed_text">Add Shed</string>
    <string name="textview_lastfeed_text">Last Feed:</string>
    <string name="edit_lastfeed_text">N/A</string>
    <string name="textview_lastshed_text">Last Shed:</string>
    <string name="edit_lastshed_text">N/A</string>
    <string name="button_sync_text">Sync</string>
    <string name="button_settings_text">Settings</string>
    <string name="button_feedlog_text">View Feed Log</string>
    <string name="button_shedlog_text">View Shed Log</string>
    <string name="reset_data">Reset Data</string>
    <string name="save">Quick Save</string>
    <string name="settings">Settings</string>
    <string name="title_activity_log">Pocket Noodle Logs</string>
    <string name="profiles">Profiles</string>
    <string name="add_profile">Add Profile</string>
    <string name="del_profile">Delete Current Profile</string>
    <string name="dialog_prompt_message">Name of profile to create:</string>
</resources>
