<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="local.john.pocketnoodle.MainActivity">


    <TextView
        android:id="@+id/textSnakeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_snake_name"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_feed_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toBottomOf="@+id/textSnakeName"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonShed"
        android:layout_marginEnd="84dp" />

    <Button
        android:id="@+id/buttonShed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_shed_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@+id/buttonFeed"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toBottomOf="@+id/textSnakeName" />

    <TextView
        android:id="@+id/textFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_lastfeed_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:labelFor="@id/lastFeedDate"
        app:layout_constraintTop_toBottomOf="@+id/buttonFeed"
        app:layout_constraintEnd_toStartOf="@+id/lastFeedDate"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/lastFeedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        android:text="@string/edit_lastfeed_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textFeed"
        app:layout_constraintTop_toBottomOf="@+id/buttonShed" />

    <TextView
        android:id="@+id/textShed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/textview_lastshed_text"
        android:labelFor="@+id/lastShedDate"
        app:layout_constraintEnd_toStartOf="@+id/lastShedDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFeed" />

    <EditText
        android:id="@+id/lastShedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        android:text="@string/edit_lastshed_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textShed"
        app:layout_constraintTop_toBottomOf="@+id/lastFeedDate" />

    <Button
        android:id="@+id/buttonSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/button_sync_text"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textShed"
        tools:layout_editor_absoluteY="406dp" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/button_settings_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/buttonSync"
        app:layout_constraintTop_toBottomOf="@+id/lastShedDate" />

    <Button
        android:id="@+id/buttonFeedLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_feedlog_text"
        app:layout_constraintEnd_toStartOf="@+id/buttonShedLog"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSync" />

    <Button
        android:id="@+id/buttonShedLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_shedlog_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonFeedLog"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings" />

</android.support.constraint.ConstraintLayout>
